syntax = "proto3";
option go_package = "/pb";
package pb;

message Account {
  string id = 1;
  string name = 2;
  
}
message PostAccountRequest {
    string userAccount = 1;
    string userPassword = 2;
}

message PostAccountResponse {

}

message GetAccountRequest {
  string userAccount = 1;
}

message GetAccountResponse {
  Account account = 1;
}

service AccountService{
  rpc PostAccount (PostAccountRequest) returns (PostAccountResponse) {

  }

  rpc GetAccount (GetAccountRequest) returns (GetAccountResponse) {

  }
}